--- a/src/app/features/reports-v2/create-report/create-report.component.html
+++ b/src/app/features/reports-v2/create-report/create-report.component.html
@@ -3,7 +3,7 @@
     <div class="card-header bg-transparent my-2">
       <span class="float-start text-primary fw-bold">
         <i class="pi pi-chevron-left"></i>
-        <a class="text-primary" routerLink="/home/reportsv2/main">Reports</a> 
+        <a class="text-primary" routerLink="/home/reportsv2/main">{{ 'report.reports' | translate }}xx</a> 
       </span>
     </div>
     <div class="card-body">
@@ -13,13 +13,13 @@
             <app-dynamic-breadcrumb [breadCrumbItems]="createReportBreadCrumbItems">
             </app-dynamic-breadcrumb>
           </div>
-          <h6 class="text-black" style="font-size: 16px; font-weight: 400;">Report name
-            <span class="text-danger">*</span>
+          <h6 class="text-black" style="font-size: 16px; font-weight: 400;">
+            {{ 'report.report_name' | translate }}<span class="text-danger">*</span>
           </h6>
           <input type="text" class="form-control form-control-sm" placeholder="Pilot report"
                  [(ngModel)]="reportName" (input)="onReportNameChange($event)">
-          <h6 class="text-black mt-3" style="font-size: 16px; font-weight: 400;">Subject area
-            <span class="text-danger">*</span>
+          <h6 class="text-black mt-3" style="font-size: 16px; font-weight: 400;">
+            {{ 'report.subject_area' | translate }}<span class="text-danger">*</span>
           </h6>
 
           <form [formGroup]="searchForm" class="my-3">
@@ -77,7 +77,7 @@
           </ng-template>
 
           <div *ngIf="dimensions.length > 0">
-            <span class="fw-medium ms-1 my-1">Filters</span>
+            <span class="fw-medium ms-1 my-1">{{ 'report.filters' | translate }}</span>
             <div style="border: solid 1px #eee; border-radius: 5px;">
               <input type="search" class="form-control m-2" placeholder="Search"
                      style="width: 94%; border-radius: 8px;">
@@ -156,7 +156,7 @@
             (click)="viewPreview()"
             class="btn btn-primary mt-3 continueBtn"
           >
-            Continue
+          {{ 'report.continue' | translate }}
           </button>
         </div>
       </div>
