--- a/src/app/features/reports-v2/criteria/criteria.component.html
+++ b/src/app/features/reports-v2/criteria/criteria.component.html
@@ -13,14 +13,14 @@
           <ul class="dropdown-menu">
             <li>
               <a class="dropdown-item sort" (mouseover)="shouldShowSortOption=true">
-                Sort
+                {{ 'report.sort' | translate }}
               </a>
               <ul class="fadeIn" [ngStyle]="{'display': shouldShowSortOption ? 'block' : 'none' }">
-                <li><a class="dropdown-item sorting" (click)="addSorting('asc')">Ascending</a></li>
-                <li><a class="dropdown-item sorting" (click)="addSorting('desc')">Descending</a></li>
+                <li><a class="dropdown-item sorting" (click)="addSorting('asc')">{{ 'report.ascending' | translate }}</a></li>
+                <li><a class="dropdown-item sorting" (click)="addSorting('desc')">{{ 'report.descending' | translate }}</a></li>
               </ul>
             </li>
-            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#filter">Filter</a></li>
+            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#filter">{{ 'report.filter' | translate }}</a></li>
           </ul>
         </div>
         <i class="pi pi-times text-danger" (click)="deleteCriteria(criterion)"></i>
@@ -64,7 +64,7 @@
             
             <form [formGroup]="filterForm">
               <div class="mb-3">
-                <label for="condition" class="form-label">Condition</label>
+                <label for="condition" class="form-label">{{ 'report.condition' | translate }}</label>
 
                 <select formControlName="operator" id="condition" class="form-select" aria-label="Default select example">
                   <option *ngFor="let condition of conditions" [value]="condition.value">
@@ -73,7 +73,7 @@
                 </select>
               </div>
               <div class="mb-5">
-                <label for="value" class="form-label">Value</label>
+                <label for="value" class="form-label">{{ 'report.value' | translate }}</label>
                 <span *ngIf="conditionsType !== 'date'">
                   <input formControlName="value" id="value" type="text" class="form-control">
                 </span>
@@ -83,12 +83,10 @@
                 </span>
               </div>
               <div class="text-center">
-                <a id="addFilterBtn" (click)="addFilter()" class="btn btn-primary ps-5 pe-5">Apply</a>
+                <a id="addFilterBtn" (click)="addFilter()" class="btn btn-primary ps-5 pe-5">
+                  {{ 'report.apply' | translate }}
+                </a>
               </div>
-            </form>
-
-            <form>
-
             </form>
           </div>
         </div>
