VQ-1092 | API to fetch policy summary

--- a/src/app/features/lms/ind/components/quotation/components/quick/quick.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/quick/quick.component.html
@@ -34,7 +34,7 @@
                 >
                   Lets get to know you
                 </div>
-              <div class="row" style="background-color: red;">
+              <div class="row">
                 
 
                 <div class="col" >
