VQ-1272: Implemented shareable language selector component

--- a/src/app/features/auth/auth.component.html
+++ b/src/app/features/auth/auth.component.html
@@ -1,5 +1,8 @@
 <div class="auth-container">
     <div class="left">
+        <div class="text-end mb-5">
+            <app-language-selector></app-language-selector>
+        </div>
         <router-outlet></router-outlet>
     </div>
     <div class="right">
