--- a/src/app/features/reports-v2/create-report/create-report.component.html
+++ b/src/app/features/reports-v2/create-report/create-report.component.html
@@ -3,7 +3,7 @@
     <div class="card-header bg-transparent my-2">
       <span class="float-start text-primary fw-bold">
         <i class="pi pi-chevron-left"></i>
-        <a class="text-primary" routerLink="/home/reportsv2/main">{{ 'report.reports' | translate }}xx</a> 
+        <a class="text-primary" routerLink="/home/reportsv2/main">{{ 'report.reports' | translate }}</a> 
       </span>
     </div>
     <div class="card-body">
