--- a/src/app/features/base/components/header/header.component.html
+++ b/src/app/features/base/components/header/header.component.html
@@ -14,16 +14,7 @@
           <span class="brand-name" style="font-size: 13px; font-weight: 900;">TURNQUEST</span>
       </a>
       <div style="color: white; padding: 0 0rem; display: flex; font-size: 1.5rem;">
-        <div class="dropdown" style="padding: 0 1rem;">
-          <span [class]="defaultLanguage" style="border-radius: 700px;  font-size: 1.7rem;"></span>
-          <div class="dropdown-content" style="min-width: 120px; font-size: 1.6rem; z-index: 999999;">
-            <div *ngFor="let language of languages">
-              <a (click)="selectLanguage(language)">
-                <span [class]="language.class"></span> <span style="color: black; font-size: 14px;"> {{language.lang}}</span>
-              </a>
-            </div>
-          </div>
-        </div>
+        <app-language-selector></app-language-selector>
         <div class="dropdown profile">
           <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             <span class="float-end">
