--- a/src/assets/css/turnkey-styles.css
+++ b/src/assets/css/turnkey-styles.css
@@ -267,7 +267,7 @@ html,body {
   height: 100vh;
   background: #fff;
   width: 35%;
-  padding-top: 15vh;
+  /* padding-top: 15vh; */
   padding-left: 20px;
   padding-right: 20px;
 }
